tests/ui/suggestions/issue-105645.stderr
error[E0277]: the trait bound `&[u8]: std::io::Write` is not satisfied
  --> $DIR/issue-105645.rs:4:9
   |
LL |     foo(&mut bref);
   |     --- ^^^^^^^^^ the trait `std::io::Write` is not implemented for `&[u8]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `std::io::Write` is implemented for `&mut [u8]`
note: required by a bound in `foo`
  --> $DIR/issue-105645.rs:8:21
   |
LL | fn foo(_: &mut impl std::io::Write) {}
   |                     ^^^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
